# PaddleOCR_TensorRT_cpp

./: CMakeLists.txt  README.md  README_ch.md
src/: engine.cpp  engine.h  main.cpp
